<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/communication">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_customer_serivice"
                    android:title="@string/customer_service"
                    android:icon="@drawable/ic_customer_service"/>
                <item
                    android:id="@+id/menu_invoice"
                    android:title="@string/invoice"
                    android:icon="@drawable/ic_invoice"/>

                <item
                    android:id="@+id/menu_log"
                    android:title="@string/log"
                    android:icon="@drawable/ic_log"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_settings"
                    android:title="@string/settings"
                    android:icon="@drawable/ic_settings"/>

                <item
                    android:id="@+id/menu_logout"
                    android:title="@string/Logout"
                    android:icon="@drawable/ic_logout"/>
            </group>
        </menu>
    </item>
</menu>